# ChangeLog for dev-perl/Panotools-Script
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Panotools-Script/ChangeLog,v 1.8 2012/06/24 12:59:19 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  29 Jul 2011; Torsten Veller <tove@gentoo.org> -Panotools-Script-0.25.ebuild:
  Cleanup

*Panotools-Script-0.260.0 (14 Jun 2011)

  14 Jun 2011; Torsten Veller <tove@gentoo.org>
  +Panotools-Script-0.260.0.ebuild:
  Version bump

  11 Jun 2010; Torsten Veller <tove@gentoo.org>
  -Panotools-Script-0.24.ebuild:
  Cleanup

*Panotools-Script-0.25 (17 Apr 2010)

  17 Apr 2010; Torsten Veller <tove@gentoo.org>
  +Panotools-Script-0.25.ebuild:
  Version bump

  09 Apr 2010; Torsten Veller <tove@gentoo.org>
  -Panotools-Script-0.23.ebuild:
  Cleanup

*Panotools-Script-0.24 (31 Dec 2009)

  31 Dec 2009; Torsten Veller <tove@gentoo.org>
  +Panotools-Script-0.24.ebuild:
  Version bump

*Panotools-Script-0.23 (21 Dec 2009)

  21 Dec 2009; Torsten Veller <tove@gentoo.org>
  +Panotools-Script-0.23.ebuild, +metadata.xml:
  Initial commit. Thanks to Tim Harder for the ebuild (#272206)