@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Panotools-Script
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Panotools-Script/ChangeLog,v 1.8 2012/06/24 12:59:19 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Panotools-Script/ChangeLog,v 1.9 2012/07/13 17:30:04 tove Exp $
+
+*Panotools-Script-0.270.0 (13 Jul 2012)
+
+  13 Jul 2012; Torsten Veller <tove@gentoo.org>
+  +Panotools-Script-0.270.0.ebuild:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
